finish offer
