# delegation-server/src/main/java/com/micro/delegationserver/model/Delegation.java
@@ -30,6 +30,8 @@ public class Delegation implements Serializable {
 
     public String auditMarketResult;
 
+    public String projectId;
+
     public OfferTableUnion offerTableUnion;
 
     public Delegation(){
