# delegation-server/src/main/java/com/micro/delegationserver/model/OfferTableUnion.java
@@ -10,14 +10,18 @@ import java.io.Serializable;
 @Data
 public class OfferTableUnion implements Serializable {
     public OfferTable 基本信息;
-    public String 用户反馈;
+
+    public String 态度;
+
+    public String 附加信息;
+
+    public OfferConfirmation 确认信息;
     public OfferTableUnion(){
 
     }
 
-    public OfferTableUnion(OfferTable table, String str)
+    public OfferTableUnion(OfferTable table)
     {
         基本信息 = table;
-        用户反馈 = str;
     }
 }
